fixed spacing in menu background

--- a/wp-content/themes/OrchardKeepers/style.css
+++ b/wp-content/themes/OrchardKeepers/style.css
@@ -329,7 +329,7 @@ hr {
     padding: 0 21px;
     background: url(images/bg_nav_border.png) right center no-repeat;
     color: #fff;
-    font-size: 13px;
+    font-size: 20px;
     text-decoration: none;
 }
 
